@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.140 2004/02/21 18:54:29 broeker Exp $
+dnl $Id: configure.in,v 1.141 2004/03/23 18:09:27 broeker Exp $
 dnl
 AC_INIT(src/graphics.c)
 AM_CONFIG_HEADER(config.h:config.hin)
@@ -87,6 +87,8 @@ AC_CHECK_HEADERS(dirent.h errno.h float.h limits.h locale.h math.h stdlib.h \
   sys/stat.h sys/systeminfo.h sys/timeb.h sys/utsname.h \
   libc.h malloc.h poll.h sgtty.h termios.h values.h
 )
+
+AC_HEADER_STDBOOL
 
 if test "$ac_cv_header_math_h" = yes ; then
   AC_MSG_CHECKING([for struct exception in math.h])
